--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "money-maker-app",
   "version": "1.0.0",
@@ -10,7 +11,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
