--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "money-maker-app",
   "version": "1.0.0",
@@ -16,6 +15,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
   }
 }
