--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "axios": "^1.6.0"
+    "lucide-react": "^0.378.0"  
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
