--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "money-maker-app",
+  "name": "money-maker-vite-allinone",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,17 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0",
-    "axios": "^1.6.0"
-    "lucide-react": "^0.378.0"  
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
+    "lucide-react": "^0.454.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "vite": "^5.0.0"
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "vite": "^5.4.2"
   }
 }
