--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.2"
-  }
+    "devDependencies": {
+  "@vitejs/plugin-react": "^4.2.1",
+  "vite": "^5.0.0"
 }
